# devOps

./: ClassA.cpp  ClassA.h  Dockerfile  HTTP_Server.cpp  Makefile  Makefile.am  Makefile.in  ScriptA.sh  ScriptB.sh  classa  classa.1  classa.elf  config.status  configure.ac  configure~  deb.deb  main.cpp
.deps/: ClassA.Po  HTTP_Server.Po  main.Po
.github/workflows/: c-cpp.yml  docker-multiarch.yml
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
deb/DEBIAN/: control
tests/: Makefile  Makefile.am  Makefile.in  classatest1  main.cpp
tests/.deps/: main.Po
